tests/test137.rael.exp
Error [1:32]: Negative range numbers for stack slicing are not allowed
| log { 1, 2, 3, 4, 5, 6, 7 } at (-1 to -3)
|                                ^
